Rename RenderTypeUtil to RenderTypeCache; refactor vertex catching and GUI state
- Rename RenderTypeUtil → RenderTypeCache, use Object2IntMap for primitive cache
- Rename MultiVertexCatcher.endCatching → forEachBuffer, separating batch finalization
- Remove stored pose state from ModelAnalyser, pass as parameter instead
- Tighten access modifiers, use var for map entries, clean up formatting
- Bump version to 0.7.8-beta